[gd_scene load_steps=14 format=3 uid="uid://h5funuah41ix"]

[ext_resource type="Script" path="res://Scripts/stage_1.gd" id="1_cnl87"]
[ext_resource type="Texture2D" uid="uid://bix1ymkq03exl" path="res://art/Background.png" id="1_e3o1i"]
[ext_resource type="Texture2D" uid="uid://cyvruub73wgwh" path="res://art/TileSet-36x36.png" id="2_diyot"]
[ext_resource type="Script" path="res://Scripts/pickup_manager.gd" id="2_nh8l0"]
[ext_resource type="PackedScene" uid="uid://qr1qmwwdvj8w" path="res://Scenes/player.tscn" id="3_yevh6"]
[ext_resource type="PackedScene" uid="uid://bx5ey80xltn6k" path="res://Scenes/bat_enemy.tscn" id="5_57q7i"]
[ext_resource type="PackedScene" path="res://Scenes/toxic_frog.tscn" id="6_dhseg"]
[ext_resource type="PackedScene" uid="uid://b4xho45ep6ufx" path="res://Scenes/coin.tscn" id="7_apr26"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_6euve"]
texture = ExtResource("2_diyot")
texture_region_size = Vector2i(32, 32)
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
6:3/0 = 0
4:4/0 = 0
6:4/0 = 0

[sub_resource type="TileSet" id="TileSet_165oc"]
tile_size = Vector2i(32, 32)
sources/0 = SubResource("TileSetAtlasSource_6euve")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lxs4n"]
size = Vector2(377.422, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_waxq8"]
size = Vector2(20, 128.51)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xafrj"]
size = Vector2(20, 192)

[node name="stage1" type="Node2D"]
position = Vector2(1, 0)
script = ExtResource("1_cnl87")

[node name="PickupManager" type="Node" parent="."]
script = ExtResource("2_nh8l0")

[node name="Background" type="Sprite2D" parent="."]
position = Vector2(112, -174)
scale = Vector2(1.93947, 1.772)
texture = ExtResource("1_e3o1i")

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource("TileSet_165oc")
format = 2
layer_0/tile_data = PackedInt32Array(65535, 131072, 1, 0, 131072, 1, 1, 131072, 1, 2, 131072, 1, 65534, 131072, 1, 65533, 131072, 1, 65532, 131072, 1, 65531, 131072, 1, 3, 131072, 1, 4, 131072, 1, 5, 131072, 1, 6, 131072, 1, 7, 131072, 1, 65530, 131072, 1, 65529, 131072, 1, 65528, 65536, 1, 131064, 65536, 2, 196600, 65536, 2, 262136, 65536, 2, 327672, 65536, 2, 393208, 65536, 2, 458744, 65536, 2, 131065, 131072, 2, 131066, 131072, 2, 131067, 131072, 2, 131068, 131072, 2, 65536, 131072, 2, 131071, 131072, 2, 65537, 131072, 2, 65538, 131072, 2, 65539, 131072, 2, 65540, 131072, 2, 131076, 131072, 2, 131077, 131072, 2, 131069, 131072, 2, 131070, 131072, 2, 196606, 131072, 2, 196605, 131072, 2, 196604, 131072, 2, 196607, 131072, 2, 131072, 131072, 2, 196609, 131072, 2, 196610, 131072, 2, 196611, 131072, 2, 196612, 131072, 2, 131074, 131072, 2, 131073, 131072, 2, 131075, 131072, 2, 65541, 131072, 2, 196613, 131072, 2, 196614, 131072, 2, 131078, 131072, 2, 65542, 131072, 2, 65543, 131072, 2, 131079, 131072, 2, 196615, 131072, 2, 262150, 131072, 2, 262151, 131072, 2, 327687, 131072, 2, 327686, 131072, 2, 393222, 131072, 2, 393223, 131072, 2, 393221, 131072, 2, 393220, 131072, 2, 393219, 131072, 2, 327683, 131072, 2, 327684, 131072, 2, 262149, 131072, 2, 327685, 131072, 2, 327681, 131072, 2, 327682, 131072, 2, 393217, 131072, 2, 393218, 131072, 2, 458751, 131072, 2, 393215, 131072, 2, 327680, 131072, 2, 196608, 131072, 2, 262143, 131072, 2, 393214, 131072, 2, 458750, 131072, 2, 262142, 131072, 2, 262141, 131072, 2, 262140, 131072, 2, 327676, 131072, 2, 393212, 131072, 2, 393213, 131072, 2, 327677, 131072, 2, 458749, 131072, 2, 458748, 131072, 2, 458747, 131072, 2, 458746, 131072, 2, 458745, 131072, 2, 393209, 131072, 2, 393210, 131072, 2, 393211, 131072, 2, 327675, 131072, 2, 327674, 131072, 2, 327673, 131072, 2, 262137, 131072, 2, 262138, 131072, 2, 262139, 131072, 2, 196603, 131072, 2, 196602, 131072, 2, 196601, 131072, 2, 327678, 131072, 2, 327679, 131072, 2, 262144, 131072, 2, 262145, 131072, 2, 262146, 131072, 2, 262147, 131072, 2, 262148, 131072, 2, 393216, 131072, 2, -8, 131072, 2, -7, 131072, 2, -65543, 131072, 2, -131079, 131072, 2, -196615, 131072, 2, -262151, 131072, 2, -65544, 131072, 2, -131080, 131072, 2, -196616, 131072, 2, -262152, 131072, 2, -327688, 131072, 2, -327687, 131072, 2, -393224, 131072, 1, -393223, 131072, 1, 8, 196608, 1, 9, 196608, 1, 10, 196608, 1, 11, 196608, 1, 12, 196608, 1, 13, 196608, 1, 14, 196608, 1, 65544, 131072, 2, 65545, 131072, 2, 65546, 131072, 2, 65547, 131072, 2, 65548, 131072, 2, 65549, 131072, 2, 65550, 131072, 2, 131086, 131072, 2, 131085, 131072, 2, 131084, 131072, 2, 131083, 131072, 2, 131082, 131072, 2, 131081, 131072, 2, 131080, 131072, 2, 196616, 131072, 2, 196617, 131072, 2, 196618, 131072, 2, 196619, 131072, 2, 196620, 131072, 2, 196621, 131072, 2, 196622, 131072, 2, 262158, 131072, 2, 262157, 131072, 2, 262156, 131072, 2, 262155, 131072, 2, 262154, 131072, 2, 262153, 131072, 2, 262152, 131072, 2, 327688, 131072, 2, 327689, 131072, 2, 327690, 131072, 2, 327691, 131072, 2, 327692, 131072, 2, 327693, 131072, 2, 327694, 131072, 2, 393230, 131072, 2, 393229, 131072, 2, 393228, 131072, 2, 393227, 131072, 2, 393226, 131072, 2, 393225, 131072, 2, 393224, 131072, 2, -65523, 131072, 2, -131059, 131072, 2, -196595, 131072, 2, -262131, 131072, 2, -65522, 196608, 2, -131058, 196608, 2, -196594, 196608, 2, -262130, 196608, 2, -327666, 196608, 2, -327667, 196608, 2, -393203, 196608, 2, -393202, 196608, 2, -458739, 131072, 1, -458738, 131072, 1, -6, 262144, 0, -5, 262144, 0, -4, 262144, 0, -3, 262144, 0, -2, 262144, 0, -1, 262144, 0, -65536, 262144, 0, -65535, 262144, 0, -65534, 262144, 0, -65533, 262144, 0, -65532, 262144, 0, -65531, 262144, 0, -65530, 262144, 0, -65529, 262144, 0, -65528, 262144, 0, -65527, 262144, 0, -65526, 262144, 0, -65525, 262144, 0, -65524, 262144, 0)

[node name="collisions" type="StaticBody2D" parent="."]
position = Vector2(111.5, 0.499992)
scale = Vector2(1.93947, 1.772)

[node name="ground" type="CollisionShape2D" parent="collisions"]
position = Vector2(1.28901, 12.1332)
shape = SubResource("RectangleShape2D_lxs4n")

[node name="leftwall" type="CollisionShape2D" parent="collisions"]
position = Vector2(-195.672, -61.8736)
shape = SubResource("RectangleShape2D_waxq8")

[node name="rightwall" type="CollisionShape2D" parent="collisions"]
position = Vector2(192.578, -60.1016)
shape = SubResource("RectangleShape2D_waxq8")

[node name="Player" parent="." instance=ExtResource("3_yevh6")]
position = Vector2(-143, -36)

[node name="BatOnlyCollision" type="StaticBody2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="BatOnlyCollision"]
position = Vector2(-8, 6)
polygon = PackedVector2Array(-243, -24, -44, -23, 469, -22, 464, -191, 461, -310, 454, -379, 327, -369, 196, -378, 56, -381, -70, -378, -194, -372, -255, -229, -244, -49, -315, -51, -244, -392, -37, -430, 186, -439, 509, -442, 561, 62, 344, 95, -39, 103, -337, 43, -246, -19)

[node name="Coin" parent="." instance=ExtResource("7_apr26")]
position = Vector2(-83, -6)

[node name="Coin2" parent="." instance=ExtResource("7_apr26")]
position = Vector2(-29, -32)

[node name="scene_change" type="Area2D" parent="."]

[node name="rightwall" type="CollisionShape2D" parent="scene_change"]
position = Vector2(445, -107)
shape = SubResource("RectangleShape2D_xafrj")

[node name="toxicFrog" parent="." groups=["enemies"] instance=ExtResource("6_dhseg")]
position = Vector2(126, -49)

[node name="BatEnemy" parent="." groups=["enemies"] instance=ExtResource("5_57q7i")]
position = Vector2(60, -54)

[node name="BatEnemy2" parent="." groups=["enemies"] instance=ExtResource("5_57q7i")]

[connection signal="body_entered" from="scene_change" to="." method="_on_scene_change_body_entered"]
